[project]
name = "compass-user-dashboard"
version = "0.1.0"
description = "TBD"
requires-python = ">=3.13"
dependencies = [
    "boto>=2.49.0",
    "compass-api-sdk>=0.9.51",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "logfire>=3.24.2",
    "matplotlib>=3.10.3",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "pyzmq>=27.0.0",
    "ruff>=0.12.4",
    "streamlit>=1.47.0",
    "streamlit-extras>=0.6.0",
    "web3>=7.12.1",
]
